chore: Fix small issues and improve unit test coverage